# Proyecto1_eddSS2025_elmermiguel

./: .gitignore  .~lock.prueba1.csv#  CMakeLists.txt  Compilacion_cmake.md  Readme.md  buidl_all.sh  build_all.sh  main.cpp  prueba1.csv
Estructuras/: ArbolAVL.cpp  ArbolAVL.h  ArbolB.cpp  ArbolB.h  ArbolBPlus.cpp  ArbolBPlus.h  ArbolBST.cpp  ArbolBST.h  HashTable.cpp  HashTable.h  ListaLibros.cpp  ListaLibros.h  hola.cpp  hola.h
Menu/: Menu.cpp  Menu.h
Objetos/: BibliotecaMagica.cpp  BibliotecaMagica.h  Libro.cpp  Libro.h
cmake/: toolchain-linux-static.cmake  toolchain-windows-static.cmake
csv/: .~lock.Catalogo_libros_EDD.csv#  .~lock.Grande.csv#  .~lock.prueba1.csv#
documentacion/: ManualTecnico.md  ManualUsuario.md
